Fixing typos in spanish language

--- a/web/angular-wallet/src/locales/es-es.json
+++ b/web/angular-wallet/src/locales/es-es.json
@@ -1,8 +1,8 @@
 {
   "account": "Cuenta",
   "account_added": "Cuenta agregada correctamente",
-  "account_balance": "Saldo de la cuenta",
-  "account_create_new": "Crea una cuenta nueva",
+  "account_balance": "Balance de la cuenta",
+  "account_create_new": "Crear una cuenta nueva",
   "account_create_new_short": "Nueva cuenta",
   "account_created": "Tu cuenta ha sido creada",
   "account_id": "ID de la cuenta",
@@ -18,7 +18,7 @@
   "activate_request_successful": "Activación solicitada con éxito. Su cuenta se activará en unos momentos.",
   "activation_failed": "Activación fallida:",
   "activation_success": "Activación solicitada con éxito. Su cuenta se activará en unos momentos.",
-  "add_message_q": "¿Añade un mensaje?",
+  "add_message_q": "¿Desea añadir un mensaje?",
   "add_note_to_self_q": "¿Agregar nota a uno mismo?",
   "add_recipient": "Agregar destinatario",
   "add_recipient_batch": "Agregar varios destinatarios por CSV",
@@ -50,13 +50,13 @@
   "assets": "Activos",
   "attachment": "Adjunto archivo",
   "back": "atrás",
-  "balance": "Equilibrio",
+  "balance": "Balance",
   "base_target": "Objetivo base",
   "bid_order_cancellation": "Cancelación de la orden de oferta",
   "bid_order_placement": "Colocación de la orden de oferta",
-  "block": "Cuadra",
+  "block": "Bloque",
   "block_details": "Detalles del bloque",
-  "block_height": "Altura del bloque",
+  "block_height": "Block Height",
   "block_id": "ID de bloque",
   "block_reward": "Recompensa de bloque",
   "block_signature": "Firma de bloque",
@@ -96,7 +96,7 @@
   "csv_error_unreadable_format": "Formato ilegible",
   "current_version": "Versión actual",
   "dashboard": "Tablero",
-  "dashboard_welcome_title": "¡Bienvenidos a Phoenix! Los saldos recientes de su cuenta aparecerán aquí.",
+  "dashboard_welcome_title": "¡Bienvenidos a Phoenix! Los balance(s) recientes de su cuenta aparecerán aquí.",
   "data": "Datos",
   "date": "Fecha",
   "deadline": "Plazo",
@@ -117,10 +117,10 @@
   "downloaded": "Descargado",
   "downloading_blockchain": "Descargando Blockchain",
   "downloading_update": "Se está descargando la actualización. Se le informará una vez finalizado.",
-  "ec_block_height": "Altura del bloque EC",
+  "ec_block_height": "Block Height EC",
   "ec_block_id": "ID de bloque EC",
   "edit": "Editar",
-  "encrypt_message": "Encriptar mensaje",
+  "encrypt_message": "¿Desea encriptar el mensaje",
   "enter_pin": "Ingrese su PIN",
   "error": "Error",
   "error_alias": "El alias no existe.",
@@ -178,7 +178,7 @@
   "error_refund_already_sent": "Reembolso ya enviado.",
   "error_send_money": "¡Un error desconocido ocurrió! Signa puede enviarse o no.",
   "error_server_connect": "No se pudo conectar al servidor.",
-  "error_set_reward_recipient": "¡Un error desconocido ocurrió! No pudiste unirte a la piscina.",
+  "error_set_reward_recipient": "¡Un error desconocido ocurrió! No pudiste unirte a la pool.",
   "error_transaction_already_signed": "Transacción ya firmada.",
   "error_transaction_not_signed": "La transacción aún no está firmada.",
   "error_unknown": "Un error desconocido ocurrió.",
@@ -205,7 +205,7 @@
   "goods": "Bienes",
   "group": "Grupo",
   "header": "Encabezamiento",
-  "height": "Altura",
+  "height": "Block height",
   "hint_offline_account": "Estás viendo esta cuenta",
   "hint_online_account": "Puede ejecutar transacciones con esta cuenta",
   "host": "Anfitrión",
@@ -237,7 +237,7 @@
   "multi_out_payment": "Pagos",
   "my_assets": "Mis activos",
   "name": "Nombre",
-  "network": "La red",
+  "network": "Red",
   "new_message": "Nuevo mensaje",
   "new_user_text": "¿Eres un usuario nuevo? Cree una nueva cuenta y conviértase en miembro de Signum.",
   "new_version": "Nueva versión",
@@ -257,7 +257,7 @@
   "not_forging": "No forja",
   "note": "Nota",
   "note_to_self": "Nota personal",
-  "number_transactions": "Numero de transacciones",
+  "number_transactions": "Número de transacciones",
   "or": "o",
   "order": "Pedido",
   "ordinary_payment": "Pago",
@@ -270,7 +270,7 @@
   "payment": "Pago",
   "payments": "Pagos",
   "peer": "Mirar",
-  "peers": "Compañeros",
+  "peers": "Nodos",
   "pending": "Pendiente",
   "percentage": "Porcentaje",
   "pin_hint": "El PIN se utiliza para verificar las acciones realizadas con su cuenta. Puede ser un valor alfanumérico corto que sea fácil de memorizar. Si olvida su PIN, simplemente puede volver a crear su cuenta utilizando la frase de contraseña generada previamente.",
@@ -304,15 +304,15 @@
   "request_burst": "Solicitar Signa",
   "request_processing_time": "Solicitar tiempo de procesamiento",
   "reset_recipients": "Restablecer destinatarios",
-  "reward_recipient": "Dirección de la piscina",
-  "same_out": "Misma cantidad",
+  "reward_recipient": "Dirección de la pool",
+  "same_out": "¿Desea enviar la misma cantidad",
   "scoop_num": "Número de cucharada",
   "search": "Buscar",
   "search_or_start_message": "Buscar o iniciar un mensaje nuevo",
   "secure": "Seguro",
   "seed_password_generator": "Mueva el cursor para sembrar el generador de números aleatorios y crear una frase de contraseña segura.",
   "select_node": "Seleccionar nodo",
-  "select_node_description": "Seleccione el par al que desea conectarse. Puede usar un par sugerido, pero también puede ingresar una URL de par arbitraria.",
+  "select_node_description": "Seleccione el nodo al que desea conectarse. Puede usar un nodo sugerido, pero también puede ingresar una URL de un nodo arbitrario.",
   "select_recipients": "Seleccionar destinatarios",
   "sell": "Vender",
   "semicolon": "Punto y coma",
@@ -320,10 +320,10 @@
   "send_burst": "Enviar Signa",
   "sender": "Remitente",
   "sender_address": "Dirección del remitente",
-  "sender_id": "identificación del remitente",
+  "sender_id": "Identificación del remitente",
   "sender_public_key": "Clave pública del remitente",
   "set_account_info": "Establecer información de cuenta",
-  "set_reward_recipient": "Únete a la piscina",
+  "set_reward_recipient": "Únete a la pool",
   "settings": "Ajustes",
   "signature": "Firma",
   "signature_hash": "Hash de firma",
@@ -341,7 +341,7 @@
   "success_clipboard_copy": "Copiado al portapapeles con éxito.",
   "success_send_money": "Se ha enviado Signa.",
   "success_set_account_info": "La información de su cuenta se ha guardado correctamente.",
-  "success_set_reward_recipient": "¡Te uniste a la piscina con éxito!",
+  "success_set_reward_recipient": "¡Te uniste a la pool con éxito!",
   "suggested_fee": "Tarifas sugeridas",
   "tabulator": "Tabulador",
   "time": "Hora",
@@ -355,7 +355,7 @@
   "transaction": "Transacción",
   "transaction_details": "Detalles de la transacción",
   "transaction_id": "ID de transacción",
-  "transactions": "Actas",
+  "transactions": "Transacciones",
   "transfer": "Transferir",
   "try_again": "Intentar otra vez",
   "type": "Tipo",
@@ -391,19 +391,19 @@
   "your_name": "Tu nombre",
   "your_passphrase": "Tu frase de contraseña",
   "youve_got_burst": "¡Tienes a Signa!",
-  "balance_locked": "Saldo bloqueado",
-  "balance_available": "Saldo disponible",
+  "balance_locked": "Balance bloqueado",
+  "balance_available": "Balance disponible",
   "commitment": "Compromiso",
   "set_commitment": "Establecer compromiso",
   "add_commitment": "Agregar compromiso",
   "revoke_commitment": "Revocar compromiso",
-  "reward_recipient_assignment": "Únete a la piscina",
+  "reward_recipient_assignment": "Únete a una pool",
   "mining": "Minería",
   "applied_commitment": "Compromiso aplicado",
   "success_set_commitment": "Actualizó con éxito su compromiso de minería",
   "error_set_commitment": "Error al actualizar el compromiso de minería. Tenga en cuenta que debe esperar 1440 bloques antes de poder revocar su compromiso.",
   "commitment_blocks_enabled": "faltan bloques hasta que se pueda revocar el compromiso",
-  "no_reward_recipient": "Aún no se ha unido ningún grupo",
+  "no_reward_recipient": "Aún no se ha unido ninguna pool",
   "commitment_unsupported": "El nodo seleccionado actualmente no es compatible con el compromiso de minería. Seleccione un nodo con al menos la versión 3+.",
   "copy_account_address_extended": "Copiar dirección extendida",
   "copy_account_publickey": "Copiar clave pública",
