wip: minor layout changes for settings

--- a/mobile/src/translations/en.json
+++ b/mobile/src/translations/en.json
@@ -184,7 +184,7 @@
         "confirmErase": "Confirm - Erase and Reset",
         "changeLanguage": "Select Language",
         "selectNode": "Select Node",
-        "copyright": "Copyright © Signum Network"
+        "copyright": "Copyright © Burst Apps Team / Signum Network"
       }
     }
   }
