feat: added reliable nodes, layout improvements

--- a/mobile/src/translations/en.json
+++ b/mobile/src/translations/en.json
@@ -74,6 +74,9 @@
     }
   },
   "core": {
+    "placeholders": {
+      "message": "Enter Message"
+    },
     "actions": {
       "add": "Add",
       "cancel": "Cancel",
