--- a/mobile/src/translations/ru.json
+++ b/mobile/src/translations/ru.json
@@ -73,6 +73,9 @@
     }
   },
   "core": {
+    "placeholders" : {
+      "message": "Введите сообщение"
+    },
     "actions": {
       "add": "Добавить",
       "cancel": "Отмена",
