refactor: app settings and automatic node selection (wip)

--- a/mobile/src/translations/en.json
+++ b/mobile/src/translations/en.json
@@ -190,6 +190,7 @@
         "confirmErase": "Confirm - Erase and Reset",
         "changeLanguage": "Select Language",
         "selectNode": "Select Node",
+        "autoNodeSelection": "Automatic Node Selection",
         "copyright": "Copyright © Burst Apps Team / Signum Network"
       }
     }
