feat: view qr code fixes and improved layout

--- a/mobile/src/translations/en.json
+++ b/mobile/src/translations/en.json
@@ -152,7 +152,8 @@
         "title": "Receive",
         "recipient": "Recipient",
         "generate": "Generate QR Code",
-        "immutable": "Immutable"
+        "immutable": "Immutable",
+        "message": "Message"
       },
       "send": {
         "noActiveAccount": {
