fix: resetting form

--- a/mobile/src/translations/ru.json
+++ b/mobile/src/translations/ru.json
@@ -152,7 +152,8 @@
         "recipient": "Получатель",
         "generate": "Создать QR-код",
         "immutable": "Неизменный",
-        "message": "Сообщение"
+        "message": "Сообщение",
+        "reset": "Сброс"
       },
       "send": {
         "noActiveAccount": {
