--- a/mobile/src/translations/en.json
+++ b/mobile/src/translations/en.json
@@ -153,7 +153,8 @@
         "recipient": "Recipient",
         "generate": "Generate QR Code",
         "immutable": "Immutable",
-        "message": "Message"
+        "message": "Message",
+        "reset": "Reset Form"
       },
       "send": {
         "noActiveAccount": {
