feat: option to show whitespace characters while importing accounts

--- a/web/angular-wallet/src/locales/bg.json
+++ b/web/angular-wallet/src/locales/bg.json
@@ -420,5 +420,6 @@
   "youve_got_from": "Сметка __a__ получи __b__ от __c__",
   "you_sent_to": "Акаунт __a__ изпратен __b__ до __c__",
   "show_testnet_nodes": "Показване на Testnet възли",
-  "message_too_long": "Съобщението е твърде дълго"
+  "message_too_long": "Съобщението е твърде дълго",
+  "show_whitespaces": "Показване на символи с празни пространства"
 }
