--- a/web/angular-wallet/src/locales/ru.json
+++ b/web/angular-wallet/src/locales/ru.json
@@ -420,5 +420,6 @@
   "youve_got_from": "Счет __a__ получил __b__ от __c__",
   "you_sent_to": "Счет __a__ отправил __b__ на __c__",
   "show_testnet_nodes": "Показать узлы тестовой сети",
-  "message_too_long": "Сообщение слишком длинное"
+  "message_too_long": "Сообщение слишком длинное",
+  "show_whitespaces": "Показать пробельные символы"
 }
