--- a/web/angular-wallet/src/locales/cs.json
+++ b/web/angular-wallet/src/locales/cs.json
@@ -420,5 +420,6 @@
   "youve_got_from": "Účet __a__ dostal __b__ od __c__",
   "you_sent_to": "Účet __a__ odeslán __b__ do __c__",
   "show_testnet_nodes": "Zobrazit uzly Testnet",
-  "message_too_long": "Zpráva je příliš dlouhá"
+  "message_too_long": "Zpráva je příliš dlouhá",
+  "show_whitespaces": "Zobrazit znaky mezer"
 }
