--- a/web/angular-wallet/src/locales/el.json
+++ b/web/angular-wallet/src/locales/el.json
@@ -420,5 +420,6 @@
   "youve_got_from": "Ο λογαριασμός __a__ πήρε __b__ από __c__",
   "you_sent_to": "Ο λογαριασμός __a__ έστειλε __b__ στο __c__",
   "show_testnet_nodes": "Εμφάνιση κόμβων Testnet",
-  "message_too_long": "Το μήνυμα είναι πολύ μεγάλο"
+  "message_too_long": "Το μήνυμα είναι πολύ μεγάλο",
+  "show_whitespaces": "Εμφάνιση χαρακτήρων λευκού χώρου"
 }
