wip: changing balances

--- a/mobile/src/translations/de.json
+++ b/mobile/src/translations/de.json
@@ -78,6 +78,7 @@
       "message": "Textnachricht eingeben"
     },
     "balances": {
+      "total": "Gesamt",
       "available": "Verfügbar",
       "locked": "Reserviert",
       "committed": "Committed"
