--- a/mobile/src/translations/ru.json
+++ b/mobile/src/translations/ru.json
@@ -78,6 +78,7 @@
       "message": "Введите сообщение"
     },
     "balances": {
+      "total": "Всего",
       "available": "Доступно",
       "locked": "Заблокировано",
       "committed": "Обязательства"
