fix: balance update no send form

--- a/mobile/src/translations/pt.json
+++ b/mobile/src/translations/pt.json
@@ -175,7 +175,7 @@
         },
         "amountNQT": "Quantia",
         "feeNQT": "Taxa",
-        "from": "A partir de",
+        "from": "De",
         "selectAccount": "Selecione uma conta",
         "sent": "Enviado!",
         "title": "Mandar",
