fix: fixed coldstart issues with navigator while deep link start (#1521)
* fix: fixed coldstart issues with navigator while deep link start

* feat: returns home after send, shows alert on url copy

* wip: fixing balance updates, refactored home screen

* wip: changing balances

* fix: balance update no send form

* fix: at least seems to update the form balance now

* chore: cleanups

--- a/mobile/src/translations/pt.json
+++ b/mobile/src/translations/pt.json
@@ -78,6 +78,7 @@
       "message": "Digite a mensagem"
     },
     "balances": {
+      "total": "Total",
       "available": "Disponível",
       "locked": "Reservado",
       "committed": "Comitado"
@@ -174,7 +175,7 @@
         },
         "amountNQT": "Quantia",
         "feeNQT": "Taxa",
-        "from": "A partir de",
+        "from": "De",
         "selectAccount": "Selecione uma conta",
         "sent": "Enviado!",
         "title": "Mandar",
