--- a/web/angular-wallet/src/locales/it.json
+++ b/web/angular-wallet/src/locales/it.json
@@ -420,5 +420,6 @@
   "youve_got_from": "Il conto __a__ ha ricevuto __b__ da __c__",
   "you_sent_to": "Conto __a__ inviato __b__ a __c__",
   "show_testnet_nodes": "Mostra nodi Testnet",
-  "message_too_long": "Il messaggio è troppo lungo"
+  "message_too_long": "Il messaggio è troppo lungo",
+  "reset": "Ripristina"
 }
