--- a/web/angular-wallet/src/locales/ca.json
+++ b/web/angular-wallet/src/locales/ca.json
@@ -420,5 +420,6 @@
   "youve_got_from": "El compte __a__ ha obtingut __b__ de __c__",
   "you_sent_to": "El compte __a__ ha enviat __b__ a __c__",
   "show_testnet_nodes": "Mostra els nodes de Testnet",
-  "message_too_long": "El missatge és massa llarg"
+  "message_too_long": "El missatge és massa llarg",
+  "reset": "Restableix"
 }
