--- a/web/angular-wallet/src/locales/de-de.json
+++ b/web/angular-wallet/src/locales/de-de.json
@@ -347,7 +347,7 @@
   "time": "Zeit",
   "timestamp": "Zeitstempel",
   "title": "Titel",
-  "to": "Zu",
+  "to": "Bis",
   "token": "Zeichen",
   "total": "Gesamt",
   "total_amount": "Gesamtmenge",
@@ -420,5 +420,6 @@
   "youve_got_from": "Konto __a__ hat __b__ von __c__ erhalten",
   "you_sent_to": "Konto __a__ hat __b__ an __c__ gesendet",
   "show_testnet_nodes": "Testnet-Knoten anzeigen",
-  "message_too_long": "Nachricht ist zu lang"
+  "message_too_long": "Nachricht ist zu lang",
+  "reset": "Zurücksetzen"
 }
