--- a/web/angular-wallet/src/locales/es-es.json
+++ b/web/angular-wallet/src/locales/es-es.json
@@ -420,5 +420,6 @@
   "youve_got_from": "La cuenta __a__ obtuvo __b__ de __c__",
   "you_sent_to": "Cuenta __a__ enviada __b__ a __c__",
   "show_testnet_nodes": "Mostrar nodos de Testnet",
-  "message_too_long": "El mensaje es demasiado largo"
+  "message_too_long": "El mensaje es demasiado largo",
+  "reset": "Reiniciar"
 }
