--- a/web/angular-wallet/src/locales/gl.json
+++ b/web/angular-wallet/src/locales/gl.json
@@ -420,5 +420,6 @@
   "youve_got_from": "A conta __a__ obtivo __b__ de __c__",
   "you_sent_to": "A conta __a__ enviou __b__ a __c__",
   "show_testnet_nodes": "Mostrar os nodos de Testnet",
-  "message_too_long": "A mensaxe é demasiado longa"
+  "message_too_long": "A mensaxe é demasiado longa",
+  "reset": "Restablecer"
 }
