--- a/web/angular-wallet/src/locales/ja.json
+++ b/web/angular-wallet/src/locales/ja.json
@@ -420,5 +420,6 @@
   "youve_got_from": "アカウント __a__ は __c__ から __b__ を取得しました",
   "you_sent_to": "アカウント __a__ が __b__ を __c__ に送信しました",
   "show_testnet_nodes": "Testnetノードを表示する",
-  "message_too_long": "メッセージが長すぎます"
+  "message_too_long": "メッセージが長すぎます",
+  "reset": "リセット"
 }
